Yeah did some stuff

--- a/basics/lobby.html
+++ b/basics/lobby.html
@@ -61,21 +61,22 @@
             </figure>
             <p>After both players have selected their teams or the random button
                 has been pressed, the game transitions into the class select phase.
-                In this phase, they are placed into the section of the lobby as
-                shown in the figure above to the left. The class select phase
-                involves selecting which class the player wishes to choose. Both
+                In this phase, they are placed into the section of the lobby shown
+                in the upmost figure above. The class select phase
+                involves selecting which class the player wishes to play as. Both
                 players can play as the same class (this is commonly referred to as
                 a ditto matchup). After a player clicks a button indicating which
                 class they wish to choose, they immediately are progressed into
                 the item and status acquire phase. As shown in the figure above
-                to the right, this phase involves collecting the items for the
+                , this phase involves collecting the items for the
                 chosen class in the chest provided. After this, the player can pick
                 <em>only one </em> of the three bonus stats. The three bonus stats
-                include: +10 EXP (the green block), +1 DARK PSYCHE (the black block) or +1 GOLD (the yellow block). The first stat the player chooses is the one they
+                include: +10 EXP (the green block), +1 DARK PSYCHE (the black block) or +1 GOLD (the yellow block).
+                The first stat the player chooses is the one they
                 receive; if they click any other stat after clicking the first one
                 they will not receive it. After the player has acquired their stat
                 bonus and their items, they can proceed to click on the button
-                behind the green emerald block. This announces that they are ready
+                on the green emerald block. This announces that they are ready
                 to start the game. Once both players have clicked this button, the
                 game immediately commences.
             </p>
@@ -85,7 +86,7 @@
                 <img src="../images/end-lobby.png" alt="The end game lobby in the minecraft custom game Altos Wars">
                 <figcaption>The end game lobby. This is where all players are teleported to after a player has finally won.</figcaption>
             </figure>
-            <p>After a player has finally destroyed the opposing player's core and
+            <p>After a player has finally destroyed the opposing player's core and has
                 killed them, that player is announced winner and all players are
                 teleported to the end game lobby shown in the figure above. Here,
                 the same regen effect at the start game lobby is applied to the
