--- a/basics/currency.html
+++ b/basics/currency.html
@@ -6,7 +6,7 @@
         <title>The official Altos Wars documentation - Currencies</title>
 
         <link rel="shortcut icon" href="../images/icon.png">
-        <link rel="stylesheet" href="../styles/currency.css">
+        <link rel="stylesheet" href="../styles/page-style.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 
@@ -25,15 +25,11 @@
                 conversion rates for trading one currency for another.</p>
             <hr>
             <h2> EXP </h2>
-            <figure>
-                <img src="../images/currency-display.png" alt="A screenshot showing how to view the different currencies in the minecraft custom game Altos Wars">
-                <figcaption>EXP is shown at the right hand scoreboard. Gold is shown when you hold tab between the player name and their connection status. </figcaption>
-            </figure>
             <p>EXP is the least valuable currency in Altos Wars, however this
                 does not make it the least important currency. EXP is obtained
                 simply by killing zombies. For every zombie you kill, one EXP
                 point is gained. You can view how much EXP you currently possess
-                by checking out the scoreboard to the right (as shown in the figure above). Is is important to
+                by checking out the scoreboard to the right (as shown in the figure below). Is is important to
                 note that EXP in this case DOES NOT refer to exp in minecraft
                 which you use for enchantments in DEFAULT minecraft. The exp bar
                 in Altos Wars is used to count how many seconds the game has been
@@ -49,6 +45,10 @@
                 enchantments obtainable via EXP, check out the document on
                 <a href="../items/enchantments.html"> enchantment shop enchantments</a>.
                 You can also convert 20EXP into a single point of dark psyche.
+                <figure>
+                    <img src="../images/currency-display.png" alt="A screenshot showing how to view the different currencies in the minecraft custom game Altos Wars">
+                    <figcaption>EXP is shown at the right hand scoreboard. Gold is shown when you hold tab between the player name and their connection status. </figcaption>
+                </figure>
             </p>
             <h2>Gold</h2>
             <p>Gold is obtained by killing other players. For every player kill
