--- a/basics/lobby.html
+++ b/basics/lobby.html
@@ -6,7 +6,7 @@
         <title>The official Altos Wars documentation - Lobby</title>
 
         <link rel="shortcut icon" href="../images/icon.png">
-        <link rel="stylesheet" href="../styles/lobby.css">
+        <link rel="stylesheet" href="../styles/page-style.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 
@@ -26,7 +26,7 @@
             <hr>
             <h2>The start game lobby</h2>
             <figure>
-                <img src="../images/start-lobby.png" alt="The starting lobby in the minecraft custom game Altos Wars" height="350" width="700">
+                <img src="../images/start-lobby.png" alt="The starting lobby in the minecraft custom game Altos Wars">
                 <figcaption>The starting lobby. This is where you should initially spawn when starting the game</figcaption>
             </figure>
             <p>As seen from the figure above, the starting lobby is bright and has
