--- a/basics/overview.html
+++ b/basics/overview.html
@@ -6,7 +6,7 @@
         <title>The official Altos Wars documentation - Overview</title>
 
         <link rel="shortcut icon" href="../images/icon.png">
-        <link rel="stylesheet" href="../styles/overview.css">
+        <link rel="stylesheet" href="../styles/page-style.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 
@@ -41,7 +41,7 @@
                 what is this core, and how do I destroy it? <p>
                 <h2>The core </h2>
             <figure>
-                <img src="../images/core.png" alt="A screenshot of two obsidian blocks stacked on top of each other in minecraft" height="350" width="700">
+                <img src="../images/core.png" alt="A screenshot of two obsidian blocks stacked on top of each other in minecraft">
                 <figcaption>The Hunters core</figcaption>
             </figure>
             <p>The core is simply two obsidian blocks stacked on top of each
