--- a/basics/setup.html
+++ b/basics/setup.html
@@ -6,7 +6,7 @@
         <title>The official Altos Wars documentation - Setup</title>
 
         <link rel="shortcut icon" href="../images/icon.png">
-        <link rel="stylesheet" href="../styles/setup.css">
+        <link rel="stylesheet" href="../styles/page-style.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 
@@ -27,6 +27,7 @@
                 up_a_server"> official minecraft wiki's tutorial on setting up
                 a server</a>.</p>
             <hr>
+            <h2>Running the server</h2>
             <p> There are various things you must ensure when running the server.
             </p>
             <ul>
@@ -42,7 +43,7 @@
                     interact with buttons</li>
             </ul>
             <figure>
-            <img src="../images/nowhere.png" alt="A screenshot of a desert at night in minecraft" height="350" width="700">
+            <img src="../images/nowhere.png" alt="A screenshot of a desert at night in minecraft">
             <figcaption>If you enter the world and spawn here make sure to kill
                 yourself </figcaption>
             </figure>
