--- a/classes/inferno-shooter.html
+++ b/classes/inferno-shooter.html
@@ -6,7 +6,7 @@
         <title>The official Altos Wars documentation - Inferno Shooter</title>
 
         <link rel="shortcut icon" href="../images/icon.png">
-        <link rel="stylesheet" href="../styles/inferno-shooter.css">
+        <link rel="stylesheet" href="../styles/page-style.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 
