--- a/map-components/outpost.html
+++ b/map-components/outpost.html
@@ -6,7 +6,7 @@
         <title>The official Altos Wars documentation - Outposts</title>
 
         <link rel="shortcut icon" href="../images/icon.png">
-        <link rel="stylesheet" href="../styles/outpost.css">
+        <link rel="stylesheet" href="../styles/page-style.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 
